--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: forsili <marvin@42.fr>                     +#+  +:+       +#+         #
+#    By: simonegiovo <simonegiovo@student.42.fr>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/01/18 09:44:39 by dmalori           #+#    #+#              #
-#    Updated: 2021/03/18 22:23:45 by forsili          ###   ########.fr        #
+#    Updated: 2021/03/21 21:15:25 by simonegiovo      ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -99,7 +99,7 @@ SRCS		= 	ft_memset.c \
 				ft_putlchar.c \
 				ft_putlstr.c \
 				ft_toupperstr.c \
-				ft_strdigit.c \
+				ft_strnbr.c \
 				ft_matrix_len.c \
 				ft_free_matrix.c \
 				ft_print_matrix.c
