--- a/checker/Makefile
+++ b/checker/Makefile
@@ -12,6 +12,7 @@ SRCS	=	checker.c \
 			../final_algo_start.c \
 			../final_algo.c \
 			../final_algo_utils.c \
+			../parsing.c \
 
 OBJ		=	$(SRCS:.c=.o)
 
